# rusty-slack-emoji-statistics

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  slack.rs
