[package]
name = "rusty-slack-emoji-statistics"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "2" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
pretty_assertions = "*"
